[package]
name = "nervusdb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nervusdb-v2-query = { path = "../nervusdb-v2-query" }

[[bin]]
name = "query_prepare"
path = "fuzz_targets/query_prepare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query_parse"
path = "fuzz_targets/query_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query_execute"
path = "fuzz_targets/query_execute.rs"
test = false
doc = false
bench = false

[workspace]
