[package]
name = "nervusdb-api"
version = "2.0.0"
license = "AGPL-3.0-only"
description = "NervusDB v2 public API – GraphStore trait and data types"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-api"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

