[package]
name = "nervusdb-api"
version = "0.0.1"
license = "AGPL-3.0-only"
description = "NervusDB v2 public API – GraphStore trait and data types"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-api"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

