[package]
name = "nervusdb-api"
version = "0.0.8"
license = "AGPL-3.0-only"
description = "NervusDB v2 public API – GraphStore trait and data types"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-api"
edition = "2024"
publish = false

[dependencies]
nervusdb = { path = "../nervusdb", version = "=0.0.8" }
