[package]
name = "nervusdb-cli"
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "NervusDB CLI – Embedded graph database with Cypher query support"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://github.com/LuQing-Studio/nervusdb#readme"
autobins = false

[[bin]]
name = "nervusdb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
nervusdb = "=0.0.1"
nervusdb-api = "=0.0.1"
nervusdb-query = "=0.0.1"
serde_json = "1.0"
