[package]
name = "nervusdb-cli"
version = "0.0.8"
edition = "2024"
license = "AGPL-3.0-only"
description = "NervusDB CLI – Embedded graph database with Cypher query support"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://github.com/LuQing-Studio/nervusdb#readme"
autobins = false

[[bin]]
name = "nervusdb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
nervusdb = { path = "../nervusdb", version = "=0.0.8", features = ["unstable-admin"] }
serde_json = "1.0"

[dev-dependencies]
fjall = "3.1.5"
tempfile = "3"
