[package]
name = "nervusdb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.12.0"
ouroboros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb = "3.1.0"

[dev-dependencies]
tempfile = "3"
