[package]
name = "nervusdb-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
indexmap = "2.12.0"
ouroboros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
flexbuffers = "2.0"  # Zero-copy property serialization (10x faster than JSON)
rmp-serde = "1.3"  # MessagePack serialization for Temporal Store v2 (supports serde_json::Value)
clap = { version = "4.5", features = ["derive"], optional = true }  # CLI for migration tool
indicatif = { version = "0.17", optional = true }  # Progress bars for migration

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb = "3.1.0"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = []
migration-cli = ["clap", "indicatif"]

[[bin]]
name = "nervus-migrate"
path = "src/bin/nervus-migrate.rs"
required-features = ["migration-cli"]
