[package]
name = "nervusdb-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2"
serde_json = "1"
nervusdb-v2 = { path = "../nervusdb-v2" }
nervusdb-v2-query = { path = "../nervusdb-v2-query" }

[build-dependencies]
napi-build = "2"

[workspace]
