[package]
name = "nervusdb-pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "nervusdb"
crate-type = ["cdylib"]

[features]
default = []
gil-refs = []

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module"] }
nervusdb = { path = "../nervusdb" }
nervusdb-query = { path = "../nervusdb-query" }
