[package]
name = "nervusdb-query"
version = "0.0.7"
license = "AGPL-3.0-only"
description = "NervusDB v2 query engine – Cypher parser, planner, and executor"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-query"
edition = "2024"
publish = false

[dependencies]
nervusdb = { path = "../nervusdb", version = "=0.0.7" }

[dev-dependencies]
tempfile = "3"
