[package]
name = "nervusdb-storage"
version = "0.0.1"
license = "AGPL-3.0-only"
description = "NervusDB v2 storage layer – crash-safe page store, WAL, and B-tree index"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-storage"
edition = "2024"

[dependencies]
arc-swap = "1.7"
crc32fast = "1.5.0"
im = "15.1"
serde_json = "1.0"
thiserror = "2.0"
nervusdb-api = "=0.0.1"

[dev-dependencies]
tempfile = "3"
