[package]
name = "nervusdb-storage"
version = "0.0.1"
license = "AGPL-3.0-only"
description = "NervusDB storage layer – Fjall-backed local property graph keyspaces"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-storage"
edition = "2024"

[dependencies]
fjall = "3.1.5"
thiserror = "2.0"
nervusdb-api = "=0.0.1"

[dev-dependencies]
tempfile = "3"
