[package]
name = "nervusdb-storage"
version = "0.0.5"
license = "AGPL-3.0-only"
description = "NervusDB storage layer – Fjall-backed local property graph keyspaces"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-storage"
edition = "2024"
publish = false

[dependencies]
nervusdb = { path = "../nervusdb", version = "=0.0.5" }

[dev-dependencies]
fjall = "3.1.5"
tempfile = "3"
