[package]
name = "nervusdb-v2-query"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nervusdb-v2-api = { path = "../nervusdb-v2-api" }

nervusdb-v2-storage = { path = "../nervusdb-v2-storage" }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
nervusdb-v2-storage = { path = "../nervusdb-v2-storage" }
nervusdb-v2 = { path = "../nervusdb-v2" }
