[package]
name = "nervusdb-v2-query"
version = "2.0.0"
license = "AGPL-3.0-only"
description = "NervusDB v2 query engine – Cypher parser, planner, and executor"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-v2-query"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nervusdb-v2-api = "=2.0.0"

nervusdb-v2-storage = "=2.0.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
nervusdb-v2-storage = "=2.0.0"
nervusdb-v2 = "=2.0.0"
