[package]
name = "nervusdb-v2-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
nervusdb-v2-api = { path = "../nervusdb-v2-api" }

[dev-dependencies]
tempfile = "3"
