[package]
name = "nervusdb-v2-storage"
version = "2.0.0"
license = "AGPL-3.0-only"
description = "NervusDB v2 storage layer – crash-safe page store, WAL, and B-tree index"
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-v2-storage"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
nervusdb-v2-api = "=2.0.0"
rand = "0.8"
ordered-float = "5.0"

[dev-dependencies]
tempfile = "3"
