[package]
name = "nervusdb-v2"
version = "0.1.0"
license = "AGPL-3.0-only"
description = "NervusDB: The SQLite of Graph Databases for Rust. (Facade)"
readme = "../README.md"
keywords = ["graph", "database", "embedded", "cypher", "sqlite"]
categories = ["database", "embedded", "data-structures"]
repository = "https://github.com/LuQing-Studio/nervusdb"
edition = "2021"

[dependencies]
nervusdb-v2-api = { path = "../nervusdb-v2-api" }
nervusdb-v2-storage = { path = "../nervusdb-v2-storage" }
nervusdb-v2-query = { path = "../nervusdb-v2-query" }

[dev-dependencies]
tempfile = "3"
