[package]
name = "nervusdb-v2"
version = "2.0.0"
license = "AGPL-3.0-only"
description = "NervusDB v2: Rust-embedded, crash-safe property graph database with Cypher subset – like SQLite for graphs."
readme = "../README.md"
keywords = ["graph", "database", "embedded", "cypher", "sqlite"]
categories = ["database", "embedded", "data-structures"]
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-v2"
edition = "2024"

[dependencies]
nervusdb-v2-api = { path = "../nervusdb-v2-api" }
nervusdb-v2-storage = { path = "../nervusdb-v2-storage" }
nervusdb-v2-query = { path = "../nervusdb-v2-query" }

[dev-dependencies]
tempfile = "3"
