[package]
name = "nervusdb-v2"
version = "2.0.0"
license = "AGPL-3.0-only"
description = "NervusDB v2: Rust-embedded, crash-safe property graph database with Cypher subset – like SQLite for graphs."
readme = "../README.md"
keywords = ["graph", "database", "embedded", "cypher", "sqlite"]
categories = ["database", "embedded", "data-structures"]
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb-v2"
edition = "2024"

[dependencies]
nervusdb-v2-api = "=2.0.0"
nervusdb-v2-storage = "=2.0.0"
nervusdb-v2-query = "=2.0.0"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
serde = "1.0.228"
serde_json = "1.0.148"
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3"
