[package]
name = "nervusdb"
version = "0.0.1"
license = "AGPL-3.0-only"
description = "NervusDB v2: Rust-embedded, crash-safe property graph database with Cypher subset – like SQLite for graphs."
readme = "../README.md"
keywords = ["graph", "database", "embedded", "cypher", "sqlite"]
categories = ["database", "embedded", "data-structures"]
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb"
edition = "2024"

[dependencies]
nervusdb-api = "=0.0.1"
nervusdb-storage = "=0.0.1"
nervusdb-query = "=0.0.1"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
serde = "1.0.228"
serde_json = "1.0.148"
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3"
