[package]
name = "nervusdb"
version = "0.0.6"
license = "AGPL-3.0-only"
description = "NervusDB v2: Rust-embedded, crash-safe property graph database with Cypher subset – like SQLite for graphs."
readme = "../README.md"
keywords = ["graph", "database", "embedded", "cypher", "sqlite"]
categories = ["database", "embedded", "data-structures"]
repository = "https://github.com/LuQing-Studio/nervusdb"
documentation = "https://docs.rs/nervusdb"
edition = "2024"

[features]
default = []
unstable-admin = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
fjall = "3.1.5"
thiserror = "2.0"
chrono = "0.4"
smallvec = "1.13"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
