[package]
name = "nervusdb-core"
version = "1.0.3"
edition = "2024"
license = "AGPL-3.0-only"
description = "Embeddable Graph Database Core (Rust)"
repository = "https://github.com/LuQing-Studio/nervusdb"
keywords = ["graph", "database", "embedded", "rdf", "cypher"]
categories = ["database", "data-structures"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
indexmap = "2.12.0"
ouroboros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
flexbuffers = "2.0"  # Zero-copy property serialization (10x faster than JSON)
clap = { version = "4.5", features = ["derive"], optional = true }  # CLI for migration tool
indicatif = { version = "0.17", optional = true }  # Progress bars for migration
nervusdb-temporal = { version = "1.0.3", path = "../nervusdb-temporal", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb = "3.1.0"
lru = "0.16.2"
usearch = { version = "2.22.0", optional = true, default-features = false }
tantivy = { version = "0.25.0", optional = true }
half = { version = "2.7.1", optional = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["varint-keys"]
migration-cli = ["clap", "indicatif"]
temporal = ["dep:nervusdb-temporal"]
varint-keys = []  # Compressed varint keys for triple storage (~60% space savings)
vector = ["dep:usearch", "dep:half"]
fts = ["dep:tantivy"]

[[bin]]
name = "nervus-migrate"
path = "src/bin/nervus-migrate.rs"
required-features = ["migration-cli"]

[[example]]
name = "bench_temporal"
path = "examples/bench_temporal.rs"
required-features = ["temporal"]
