[package]
name = "nervusdb-temporal"
version = "1.0.3"
edition = "2024"
license = "AGPL-3.0-only"
description = "Temporal Store for NervusDB - AI Memory / Episode management"
repository = "https://github.com/LuQing-Studio/nervusdb"
keywords = ["graph", "database", "temporal", "ai-memory", "episode"]
categories = ["database", "data-structures"]

[dependencies]
redb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
rmp-serde = "1.3"  # MessagePack for efficient serialization
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
