[package]
name = "nervusdb-wasm"
version = "1.2.0"
authors = ["NervusDB Team"]
edition = "2021"
description = "WebAssembly storage engine for NervusDB"
license = "AGPL-3.0-only"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nervusdb-core = { path = "../nervusdb-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip debug symbols
panic = "abort"     # Smaller binary
overflow-checks = false  # Faster math operations

[profile.dev]
opt-level = 0

# Production profile with more aggressive optimizations
[profile.production]
inherits = "release"
opt-level = 3       # Maximum speed optimization
lto = "fat"         # Aggressive LTO
codegen-units = 1
