[package]
name = "nervusdb-py"
version = "1.0.0"
edition = "2021"
description = "Python bindings for NervusDB"
license = "MIT"

[lib]
name = "nervusdb"
crate-type = ["cdylib"]

[dependencies]
nervusdb-core = { path = "../../../nervusdb-core" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38", "serde"] }
pythonize = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
