[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "nervusdb"
version = "1.0.0"
description = "Python bindings for NervusDB"
authors = [{ name = "NervusDB" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
