[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "nervusdb"
version = "1.0.1"
description = "Python bindings for NervusDB"
authors = [{ name = "LuQing Studio" }]
requires-python = ">=3.8"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPL)"
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
