[build-system]
requires = ["maturin>=1.10,<2.0", "uniffi-bindgen>=0.28,<0.29"]
build-backend = "maturin"

[project]
name = "nervusdb"
version = "1.0.3"
description = "Python bindings for NervusDB"
authors = [{ name = "LuQing Studio" }]
requires-python = ">=3.8"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPL)"
]

[tool.maturin]
bindings = "uniffi"
manifest-path = "../../uniffi/nervusdb-uniffi/Cargo.toml"
python-source = "python"
python-packages = ["nervusdb"]

[tool.maturin.dependencies]
features = ["v2"]
