[package]
name = "nervusdb-node"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.15.0", features = ["napi6", "serde-json"] }
napi-derive = "2.15.0"
nervusdb-core = { path = "../../../../nervusdb-core" }
serde_json = "1.0"

[features]
default = []
temporal = ["nervusdb-core/temporal"]

[build-dependencies]
napi-build = "2.0.1"
